--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "homepage": "https://localhost:8080/",
+  "homepage": "http://localhost:8080/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
