--- a/front-develop/front-develop/package.json
+++ b/front-develop/front-develop/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-spinners": "^0.13.8",
-    "styled-components": "^6.1.6"
+    "styled-components": "^6.1.6",
+    "styled-reset": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
